--- a/web-interface/chat/index.html
+++ b/web-interface/chat/index.html
@@ -76,7 +76,7 @@ sendBtn.addEventListener('click', async () => {
   method: 'POST',
   headers: {
     'Content-Type': 'application/json',
-    'Authorization': 'Bearer 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'
+    'Authorization': 'Bearer xxxxxx'
   },
   body: JSON.stringify({
     model: 'llama-3.1-8b-instant',
